# online-mis-wrapper

./: .env.example  README.md  compose.redis.yml  compose.yml  package.json  pnpm-lock.yaml  tailwind.config.ts
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.example  go.mod  go.sum
backend/cmd/server/: main.go
backend/html/: semester_year.html
backend/internal/core/errs/: http_error.go
backend/internal/core/helper/: api_response.go  json_error.go  map_slice.go  midnight_duration.go  online_mis_extractor.go  online_mis_handler.go  semester_type.go
backend/internal/core/http_request/: request.go
backend/internal/core/validator/: validate_extractor.go  validator.go
backend/internal/resources/academic/absen/: absen.html  extractor.go  handler.go  model.go
backend/internal/resources/academic/frs/: extractor.go  frs.html  handler.go  model.go
backend/internal/resources/academic/jadwal_kuliah/: extractor.go  handler.go  jadwal_kuliah.html  model.go
backend/internal/resources/academic/nilai_semester/: extractor.go  handler.go  model.go  nilai_semester.html
backend/internal/resources/auth/: controller.go  handler.go  model.go
backend/internal/resources/common/: api_type.go  online_mis_extractor.go  online_mis_handler.go  semester_type.go
backend/internal/resources/login/: controller.go  handler.go  model.go
backend/internal/router/: router.go
backend/internal/router/middleware/: enforce_json.go  error_handler.go  middeware.go  user_middleware.go
backend/internal/services/cache/: cache.go
backend/src/: config.rs  lib.rs  main.rs
backend/src/core/: api_response.rs  axum_extractor.rs  error.rs  generate_openapi_response.rs  handler.rs  helper.rs  mod.rs
backend/src/http/: api_response.rs  auth.rs  docs.rs  error.rs  handler.rs  helper.rs  mod.rs  success.rs  validator.rs
backend/src/http/academic/: absen.rs  frs.rs  jadwal_kuliah.rs  mod.rs  nilai_semester.rs
backend/src/http/features/: auth.rs  mod.rs
backend/src/http/features/academic/: absen.rs  frs.rs  jadwal_kuliah.rs  logbook_create.rs  logbook_delete.rs  logbook_detail.rs  mod.rs  nilai_semester.rs
backend/src/http/features/others/: check_ip.rs  invalidate_cache.rs  (+1 more)
(+95 files in other folders)
