[package]
name = "online_mis_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.6.2", features = [
    "catch-panic",
    "compression-full",
    "timeout",
    "trace",
    "set-header",
    "cors",
] }
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
dotenv = "0.15.0"
regex = "1.11.1"
reqwest = { version = "0.12.11", features = [
    "cookies",
    "socks",
    "json",
    "rustls-tls",
], default-features = false }
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "fs"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
bb8 = "0.9.0"
bb8-redis = "0.18.0"
redis = "0.27.6"
aide = { version = "0.14.0", features = [
    "scalar",
    "axum-json",
    "macros",
    "axum-query",
    "axum-form",
] }
schemars = "0.8.22"
jsonschema = "0.29.1"
base64 = "0.22.1"
